Added codes for homework

--- a/part1_basics_langgraph/session1_langgraph_basics.ipynb
+++ b/part1_basics_langgraph/session1_langgraph_basics.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5af21942",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
     "from langchain_openai import ChatOpenAI\n",
     "from IPython.display import Image, display\n",
     "\n",
-    "from langgraph.graph import StateGraph , START , END , MessageGraph \n",
+    "from langgraph.graph import StateGraph , START , END \n",
     "from langchain_core.messages import HumanMessage , AIMessage , SystemMessage\n",
     "from typing import TypedDict"
    ]
@@ -1037,10 +1037,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "2b9581a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I apologize for the delay with your refund for order number 11564. Let me check the status for you.\n",
+      "\n",
+      "Could you please confirm the payment method you used for this order? This will help me provide more accurate information.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
     "from langchain_core.messages import SystemMessage, HumanMessage, AIMessage\n",
@@ -1050,7 +1060,7 @@
     "#past chat history\n",
     "chat_history = [\n",
     "    HumanMessage(content=\"I want to request a refund for my order number 11564.\"),\n",
-    "    AIMessage(content=\"Your refund request for order number 11564 has been initiated. It will be processed in 3-5 business days.\")\n",
+    "    AIMessage(content=\"Your refund request for order number 11564 has been initiated. It will be processed in 3-5 business days. refund initiated on sept 3 2025\")\n",
     "    ]\n",
     "\n",
     "# chat template\n",
@@ -1061,9 +1071,12 @@
     "])\n",
     "\n",
     "# create prompt\n",
-    "prompt = chat_template.invoke({'chat_history':chat_history, 'query':'Where is my refund'})\n",
+    "prompt = chat_template.invoke({'chat_history':chat_history, 'query':'Where is my refund for 11564. I have not received it yet.'})\n",
     "\n",
-    "result = model.invoke(prompt)"
+    "result = model.invoke(prompt)\n",
+    "\n",
+    "print(result.content)\n",
+    "\n"
    ]
   },
   {
